# Living-Hero

./: .gitignore  index.html  package-lock.json  package.json
docs/: DEV_SETUP.md  tilemap_redesign.md  tilemap_redesign_new.md
docs/core/: gdd.md  prd.md  tdd.md
docs/prompts/: 00_tauri_setup.md  01_init.md  02_battle_system.md  03_hero_ai.md  03b_bitnet_integration.md  03b_llm_integration.md  04_ai_feedback.md  05_overworld.md  06_progression_skills.md  07_enemy_ai.md  08_async_pvp.md
public/: style.css
public/assets/maps/: battlefield.json  overworld.json  playground.json
public/dev/: README.txt  tile-mapper.workspace.json
scripts/: ab-test-models.ts  bundle-ollama.js  setup-dev-sidecar.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ollama.rs
src/game/: main.ts  types.ts
src/game/ai/: BattleVocabulary.ts  DirectiveTactics.ts  HeroDecisionProvider.ts  HeroScheduler.ts  HeroSummaryBuilder.ts  IntentExecutor.ts  LLMClient.ts  LocalRuleBasedHeroBrain.ts  OllamaHeroBrain.ts  PlayerMessageInterpreter.ts  ScoredPersonalityBrain.ts  TacticalPositionMenu.ts  candidates.ts  config.ts  contextBuilder.ts  cover.ts  heroPrompts.ts  scoring.ts  selector.ts
src/game/data/: enemyVariants.ts  heroes.ts  portalFloors.ts  skills.ts  terrain.ts  units.ts
src/game/entities/: Hero.ts  Unit.ts
src/game/maps/: islandGenerator.ts  terrainGrammar.ts  tileMapping.ts  tiled.ts  wfcSampleMap.ts
src/game/scenes/: BattleScene.ts  (+2 more)
src/hooks/: useOllamaStatus.ts
(+24 files in other folders)
